# esp32_project

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
.devcontainer/: devcontainer.json
components/app_shell/: CMakeLists.txt  Kconfig  app_shell.c
components/app_shell/include/: app_shell.h
components/apps/cyd_alarm/: CMakeLists.txt  cyd_alarm.c
components/apps/cyd_clock_app/: CMakeLists.txt  Kconfig  cyd_clock_app.c
components/apps/cyd_clock_settings_app/: CMakeLists.txt  cyd_clock_settings_app.c
components/apps/cyd_system_apps/: CMakeLists.txt  cyd_system_apps.c
components/cyd_clock_app/: CMakeLists.txt  Kconfig  cyd_clock_app.c
components/cyd_clock_app/include/: cyd_clock_app.h
components/cyd_display/: CMakeLists.txt  Kconfig  cyd_display.cpp
components/cyd_display/include/: cyd_display.h
components/cyd_input/: Kconfig  cyd_input.c
components/cyd_input/include/: cyd_input.h
components/cyd_speaker/: CMakeLists.txt  cyd_speaker.c
components/cyd_speaker/include/: cyd_speaker.h
components/cyd_status_led/: CMakeLists.txt  cyd_status_led.c
components/cyd_status_led/include/: cyd_status_led.h
components/cyd_system_apps/: CMakeLists.txt  cyd_system_apps.c
components/cyd_system_apps/include/: cyd_system_apps.h
components/cyd_ui/: cyd_ui.c
components/cyd_ui/include/: cyd_ui.h
components/cyd_wifi_setup/: cyd_wifi_setup.c
components/cyd_wifi_setup/include/: cyd_wifi_setup.h
components/esp32_wifi_sta/: Kconfig
components/framework/app_shell/: CMakeLists.txt  Kconfig  app_shell.c
components/framework/cyd_text_input/: CMakeLists.txt  cyd_text_input.c
components/framework/cyd_ui/: CMakeLists.txt
components/framework/system_boot/: CMakeLists.txt  system_boot.c
components/lovyangfx_wrapper/: CMakeLists.txt
components/platform/cyd_display/: CMakeLists.txt  cyd_display.cpp
components/platform/cyd_input/: CMakeLists.txt  Kconfig  cyd_input.c
components/platform/cyd_speaker/: Kconfig  cyd_speaker.c
components/platform/cyd_status_led/: Kconfig
components/platform/sd_card_storage/: CMakeLists.txt  Kconfig  sd_card_storage.c
components/platform/xpt2046_softspi/: CMakeLists.txt  Kconfig  xpt2046_softspi.c
components/products/cyd_clock_composition/: CMakeLists.txt  cyd_clock_composition.c
components/products/cyd_clock_composition/include/: cyd_clock_composition.h
components/services/app_scheduler/: CMakeLists.txt  app_scheduler.c
components/services/cyd_wifi_setup/: CMakeLists.txt  cyd_wifi_setup.c  cyd_wifi_setup_stub.c
components/services/cyd_wifi_setup/include/: cyd_wifi_setup.h
components/services/error_log_store/: CMakeLists.txt  error_log_store.c
components/services/esp32_wifi_sta/: CMakeLists.txt  Kconfig  esp32_wifi_sta.c  esp32_wifi_sta_stub.c
components/services/esp32_wifi_sta/include/: esp32_wifi_sta.h
components/services/radio_manager/: CMakeLists.txt  Kconfig  radio_manager.c  radio_manager_stub.c
components/services/radio_manager/include/: radio_manager.h
components/services/sd_card_files/: CMakeLists.txt  sd_card_files.c
components/services/status_indicator/: CMakeLists.txt  status_indicator.c
components/services/time_sync/: CMakeLists.txt  Kconfig  time_sync.c  time_sync_stub.c
components/services/time_sync/include/: time_sync.h
components/services/time_tick/: CMakeLists.txt  time_tick.c
components/services/wifi_connection/: CMakeLists.txt  Kconfig  wifi_connection.c  wifi_connection_manager.c  wifi_connection_stub.c
components/services/wifi_connection/include/: wifi_connection.h
components/services/wifi_manager/: Kconfig  wifi_manager.c
components/services/wifi_profile_store/: CMakeLists.txt  wifi_profile_store.c  wifi_profile_store_stub.c
components/services/wifi_profile_store/include/: wifi_profile_store.h
components/support/app_diagnostics/: CMakeLists.txt
components/support/lovyangfx_wrapper/: CMakeLists.txt
components/support/lovyangfx_wrapper/include/driver/: i2s.h
components/support/nvs_health/: CMakeLists.txt  nvs_health.c
components/support/nvs_schema/: CMakeLists.txt  nvs_schema.c
components/time_sync/: CMakeLists.txt  time_sync.c
components/time_sync/include/: time_sync.h
components/wifi_manager/: CMakeLists.txt  Kconfig  wifi_manager.c
components/wifi_profile_store/: CMakeLists.txt  wifi_profile_store.c
docs/: app_scheduler.md  app_shell.md  build_feature_switches.md  components_reorg_plan.md  cyd_clock_app.md  cyd_clock_composition.md  cyd_clock_settings_app.md  cyd_display.md  cyd_input.md  cyd_speaker.md  cyd_status_led.md  cyd_system_apps.md  cyd_text_input.md  cyd_ui.md  cyd_wifi_setup.md  error_log_store.md  esp32_wifi_sta.md  license.md  lovyangfx_wrapper.md  nvs_storage.md  radio_manager.md  sd_card_files.md  sd_card_storage.md  status_indicator.md  system_apps_split_plan.md  time_sync.md  time_tick.md  wifi_connection.md  wifi_manager.md
main/: CMakeLists.txt  main.c
scripts/: idf-build.sh  idf-env.sh  idf-flash-monitor.sh  idf-menuconfig.sh
(+29 files in other folders)
